2001-12-08  James Henstridge  <james@daa.com.au>

	* gnome-appbar.c (gnome_appbar_constructor): _priv->interactivity
	is a member of the enum.  When deciding on whether to make the
	status bar a label or entry, we want to check _priv->interactive.

	* gnome-ui-init.c (libgnomeui_post_args_parse): looks like the
	accelerator loading code got lost at some point.  Adding it back
	here, using gtk_accel_map_load().

	* gnome-app-helper.c (create_menu_item): get rid of the
	GtkItemFactory call.  Accel saving/changing no longer needs to go
	through the item factory code.
	(gnome_app_fill_menu_custom): if the menu shell is a GtkMenu, make
	sure it knows what accel group to use for dynamic accelerator
	changing.

2001-12-08  Anders Carlsson  <andersca@gnu.org>

	* gnome-marshal-main.c: Add file which includes gnome-marshal.[ch].

2001-12-07  jacob berkman  <jacob@ximian.com>

	* gnome-druid-page-standard.c
	(gnome_druid_page_standard_class_init): make it build for people
	with -Werror, and subsequently break for people who want to run it

	* gnome-dateedit.c (create_children): add a forward decl

	* gnome-messagebox.c (gnome_message_box_construct): make public
	and fix some bugs

	* gnome-mdi-session.c (gnome_mdi_save_state): fix reference to
	BonoboDockLayout

	* gnome-icon-list.c (gnome_icon_list_constructor): don't call the
	canvas functions until here, since they will not be available
	until after the object has been constructed

	* gnome-druid-page-edge.c (gnome_druid_page_edge_setup): use
	PangoFontDescriptions, and remove incorrect properties on some of
	the canvas items

	* gnome-dialog.c (GnomeDialogPrivate): move definition to
	libgnomeuiP.h such that libglade support can peek into it

	* gnome-dateedit.c (gnome_date_edit_instance_init): create
	children here
	(gnome_date_edit_construct): just set the properties, rather than
	creating the children

	* gnome-appbar.c (gnome_appbar_new): call g_object_new rather than
	the constructor